--- a/index.html
+++ b/index.html
@@ -92,13 +92,37 @@
       <p class="text name-job">Product Designer</p>
      <ul class="ourtem-soc-list">
          <li class="ourtem-soc-item">
-          <a href="" class="ourtem-soc-link"> </a> <svg class="ourtem-icon" width="40" height="40"> <use href="/images/icons.svg#icon-icon-instagram-21"> </use> </svg> </li>
+          <a href="" class="ourtem-soc-link">  
+            <svg class="ourtem-icon" width="16" height="16"> 
+              <use href="./images/icons.svg#icon-instagram-21"> 
+              </use> 
+            </svg> 
+          </a> 
+        </li>
          <li class="ourtem-soc-item">
-          <a href="" class="ourtem-soc-link"> </a> <svg class="ourtem-icon" width="40" height="40"> <use href="/images/icons.svg#icon-twitter-11"> </use> </svg></li>
+          <a href="" class="ourtem-soc-link">  
+            <svg class="ourtem-icon" width="16" height="16"> 
+              <use href="./images/icons.svg#icon-twitter-11"> 
+              </use> 
+            </svg> 
+          </a>
+        </li>
          <li class="ourtem-soc-item">
-          <a href="" class="ourtem-soc-link"> </a> <svg class="ourtem-icon" width="40" height="40"> <use href="/images/icons.svg#icon-facebook-11"> </use> </svg></li>
+          <a href="" class="ourtem-soc-link">  
+            <svg class="ourtem-icon" width="16" height="16"> 
+              <use href="./images/icons.svg#icon-facebook-11"> 
+              </use>
+            </svg>
+          </a>
+        </li>
          <li class="ourtem-soc-item">
-          <a href="" class="ourtem-soc-link"> </a> <svg class="ourtem-icon" width="40" height="40"> <use href="/images/icons.svg#icon-linkedin-11"> </use> </svg></li>
+          <a href="" class="ourtem-soc-link">  
+            <svg class="ourtem-icon" width="16" height="16"> 
+             <use href="./images/icons.svg#icon-linkedin-11"> 
+             </use> 
+            </svg>
+          </a>
+        </li>
        </ul>
     </div>
     </li>
@@ -109,14 +133,38 @@
         <h3 class="name">Tom Ford</h3>
         <p class="text name-job">Frontend Developer</p>
         <ul class="ourtem-soc-list">
+        <li class="ourtem-soc-item">
+          <a href="" class="ourtem-soc-link">  
+            <svg class="ourtem-icon" width="16" height="16"> 
+              <use href="./images/icons.svg#icon-instagram-21"> 
+              </use> 
+            </svg> 
+          </a> 
+        </li>
          <li class="ourtem-soc-item">
-          <a href="" class="ourtem-soc-link"> </a> <svg class="ourtem-icon" width="40" height="40"> <use href="/images/icons.svg#icon-icon-instagram-21"> </use> </svg> </li>
+          <a href="" class="ourtem-soc-link">  
+            <svg class="ourtem-icon" width="16" height="16"> 
+              <use href="./images/icons.svg#icon-twitter-11"> 
+              </use> 
+            </svg> 
+          </a>
+        </li>
          <li class="ourtem-soc-item">
-          <a href="" class="ourtem-soc-link"> </a> <svg class="ourtem-icon" width="40" height="40"> <use href="/images/icons.svg#icon-twitter-11"> </use> </svg></li>
+          <a href="" class="ourtem-soc-link">  
+            <svg class="ourtem-icon" width="16" height="16"> 
+              <use href="./images/icons.svg#icon-facebook-11"> 
+              </use>
+            </svg>
+          </a>
+        </li>
          <li class="ourtem-soc-item">
-          <a href="" class="ourtem-soc-link"> </a> <svg class="ourtem-icon" width="40" height="40"> <use href="/images/icons.svg#icon-facebook-11"> </use> </svg></li>
-         <li class="ourtem-soc-item">
-          <a href="" class="ourtem-soc-link"> </a> <svg class="ourtem-icon" width="40" height="40"> <use href="/images/icons.svg#icon-linkedin-11"> </use> </svg></li>
+          <a href="" class="ourtem-soc-link">  
+            <svg class="ourtem-icon" width="16" height="16"> 
+             <use href="./images/icons.svg#icon-linkedin-11"> 
+             </use> 
+            </svg>
+          </a>
+        </li>
        </ul>
       </div>
       </li>
@@ -128,13 +176,37 @@
       <p class="text name-job">Marketing</p>
        <ul class="ourtem-soc-list">
          <li class="ourtem-soc-item">
-          <a href="" class="ourtem-soc-link"> </a> <svg class="ourtem-icon" width="40" height="40"> <use href="/images/icons.svg#icon-icon-instagram-21"> </use> </svg> </li>
+          <a href="" class="ourtem-soc-link">  
+            <svg class="ourtem-icon" width="16" height="16"> 
+              <use href="./images/icons.svg#icon-instagram-21"> 
+              </use> 
+            </svg> 
+          </a> 
+        </li>
          <li class="ourtem-soc-item">
-          <a href="" class="ourtem-soc-link"> </a> <svg class="ourtem-icon" width="40" height="40"> <use href="/images/icons.svg#icon-twitter-11"> </use> </svg></li>
+          <a href="" class="ourtem-soc-link">  
+            <svg class="ourtem-icon" width="16" height="16"> 
+              <use href="./images/icons.svg#icon-twitter-11"> 
+              </use> 
+            </svg> 
+          </a>
+        </li>
          <li class="ourtem-soc-item">
-          <a href="" class="ourtem-soc-link"> </a> <svg class="ourtem-icon" width="40" height="40"> <use href="/images/icons.svg#icon-facebook-11"> </use> </svg></li>
+          <a href="" class="ourtem-soc-link">  
+            <svg class="ourtem-icon" width="16" height="16"> 
+              <use href="./images/icons.svg#icon-facebook-11"> 
+              </use>
+            </svg>
+          </a>
+        </li>
          <li class="ourtem-soc-item">
-          <a href="" class="ourtem-soc-link"> </a> <svg class="ourtem-icon" width="40" height="40"> <use href="/images/icons.svg#icon-linkedin-11"> </use> </svg></li>
+          <a href="" class="ourtem-soc-link">  
+            <svg class="ourtem-icon" width="16" height="16"> 
+             <use href="./images/icons.svg#icon-linkedin-11"> 
+             </use> 
+            </svg>
+          </a>
+        </li>
        </ul>
     </div>
     </li>
@@ -146,13 +218,37 @@
       <p class="text name-job">UI Designer</p>
        <ul class="ourtem-soc-list">
          <li class="ourtem-soc-item">
-          <a href="" class="ourtem-soc-link"> </a> <svg class="ourtem-icon" width="40" height="40"> <use href="/images/icons.svg#icon-icon-instagram-21"> </use> </svg> </li>
+          <a href="" class="ourtem-soc-link">  
+            <svg class="ourtem-icon" width="16" height="16"> 
+              <use href="./images/icons.svg#icon-instagram-21"> 
+              </use> 
+            </svg> 
+          </a> 
+        </li>
          <li class="ourtem-soc-item">
-          <a href="" class="ourtem-soc-link"> </a> <svg class="ourtem-icon" width="40" height="40"> <use href="/images/icons.svg#icon-twitter-11"> </use> </svg></li>
+          <a href="" class="ourtem-soc-link">  
+            <svg class="ourtem-icon" width="16" height="16"> 
+              <use href="./images/icons.svg#icon-twitter-11"> 
+              </use> 
+            </svg> 
+          </a>
+        </li>
          <li class="ourtem-soc-item">
-          <a href="" class="ourtem-soc-link"> </a> <svg class="ourtem-icon" width="40" height="40"> <use href="/images/icons.svg#icon-facebook-11"> </use> </svg></li>
+          <a href="" class="ourtem-soc-link">  
+            <svg class="ourtem-icon" width="16" height="16"> 
+              <use href="./images/icons.svg#icon-facebook-11"> 
+              </use>
+            </svg>
+          </a>
+        </li>
          <li class="ourtem-soc-item">
-          <a href="" class="ourtem-soc-link"> </a> <svg class="ourtem-icon" width="40" height="40"> <use href="/images/icons.svg#icon-linkedin-11"> </use> </svg></li>
+          <a href="" class="ourtem-soc-link">  
+            <svg class="ourtem-icon" width="16" height="16"> 
+             <use href="./images/icons.svg#icon-linkedin-11"> 
+             </use> 
+            </svg>
+          </a>
+        </li>
       </ul>
     </div>
     </li>
@@ -232,10 +328,10 @@
     <div class="footer-icon">
       <p class="text-social">Social media</p>
     <div class="menu-icon">
-         <svg class="icon-social" width="40" height="40"> <use href="/images/icons.svg#icon-instagram-21"> </use> </svg>
-         <svg class="icon-social" width="40" height="40"> <use href="/images/icons.svg#icon-twitter-11"> </use> </svg>
-         <svg class="icon-social" width="40" height="40"> <use href="/images/icons.svg#icon-facebook-11"> </use> </svg>
-         <svg class="icon-social" width="40" height="40"> <use href="/images/icons.svg#icon-linkedin-11"> </use> </svg> 
+         <svg class="icon-social" width="16" height="16"> <use href="/images/icons.svg#icon-instagram-21"> </use> </svg>
+         <svg class="icon-social" width="16" height="16"> <use href="/images/icons.svg#icon-twitter-11"> </use> </svg>
+         <svg class="icon-social" width="16" height="16"> <use href="/images/icons.svg#icon-facebook-11"> </use> </svg>
+         <svg class="icon-social" width="16" height="16"> <use href="/images/icons.svg#icon-linkedin-11"> </use> </svg> 
     </div>
     </div>
     </div>
