--- a/index.html
+++ b/index.html
@@ -49,28 +49,28 @@
     <h2 class="title-feature visually-hidden">Feature</h2>
   <ul class="list-feature icon-list">
     <li class="feature-item">
-     <div class="icon-div"> <svg class="icon" width="64" height="64"> <use href="/images/icons.svg#icon-antenna-11"></use> </svg></div>
+     <div class="icon-div"> <svg class="icon" width="64" height="64"> <use href="./images/icons.svg#icon-antenna-11"></use> </svg></div>
     <h3 class="feature-subtitle">Strategy</h3>
     <p class="text">Our goal is to identify the business problem to walk away with the perfect and creative solution. 
     </p>
     </li>
 
      <li class="feature-item">
-         <div class="icon-div"><svg class="icon" width="64" height="64"> <use href="/images/icons.svg#icon-clock-11"></use> </svg></div>
+         <div class="icon-div"><svg class="icon" width="64" height="64"> <use href="./images/icons.svg#icon-clock-11"></use> </svg></div>
       <h3 class="feature-subtitle">Punctuality</h3>
     <p class="text">Bring the key message to the brand's audience for the best price within the shortest possible time.
     </p>
     </li>
 
      <li class="feature-item">
-      <div class="icon-div"><svg class="icon" width="64" height="64"> <use href="/images/icons.svg#icon-diagram-11"></use> </svg></div>
+      <div class="icon-div"><svg class="icon" width="64" height="64"> <use href="./images/icons.svg#icon-diagram-11"></use> </svg></div>
     <h3 class="feature-subtitle">Diligence</h3>
     <p class="text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
     </p>
     </li>
 
      <li class="feature-item">
-      <div class="icon-div"><svg class="icon" width="64" height="64"> <use href="/images/icons.svg#icon-astronaut-11"></use> </svg></div>
+      <div class="icon-div"><svg class="icon" width="64" height="64"> <use href="./images/icons.svg#icon-astronaut-11"></use> </svg></div>
     <h3 class="feature-subtitle">Technologies</h3>
     <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving. 
     </p>
@@ -328,10 +328,10 @@
     <div class="footer-icon">
       <p class="text-social">Social media</p>
     <div class="menu-icon">
-         <svg class="icon-social" width="16" height="16"> <use href="/images/icons.svg#icon-instagram-21"> </use> </svg>
-         <svg class="icon-social" width="16" height="16"> <use href="/images/icons.svg#icon-twitter-11"> </use> </svg>
-         <svg class="icon-social" width="16" height="16"> <use href="/images/icons.svg#icon-facebook-11"> </use> </svg>
-         <svg class="icon-social" width="16" height="16"> <use href="/images/icons.svg#icon-linkedin-11"> </use> </svg> 
+         <svg class="icon-social" width="16" height="16"> <use href="./images/icons.svg#icon-instagram-21"> </use> </svg>
+         <svg class="icon-social" width="16" height="16"> <use href="./images/icons.svg#icon-twitter-11"> </use> </svg>
+         <svg class="icon-social" width="16" height="16"> <use href="./images/icons.svg#icon-facebook-11"> </use> </svg>
+         <svg class="icon-social" width="16" height="16"> <use href="./images/icons.svg#icon-linkedin-11"> </use> </svg> 
     </div>
     </div>
     </div>
