--- a/index.html
+++ b/index.html
@@ -261,13 +261,14 @@
   <h2 class="title-portfolio">Our Portfolio </h2>
   <ul class="portfolio-list">
     <li class="portfolio-item item-two">
-      <!-- <div class="image-container"> -->
+      <!-- <div class="image-overlay"> -->
       <img src="./images/bankapp.jpg" alt="banking-app" width="360" height="300"/>
-         <!-- <div class="overlay">    
-      <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
-        </div>
-        </div> -->
-      <div class="project-text">
+<!--             
+      <p class="overlay-text"> 
+        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App 
+      </p>
+      </div> -->
+    <div class="project-text">
       <h3 class="project">Banking App</h3>
       <p class="text">App</p>
       </div>
