--- a/index.html
+++ b/index.html
@@ -351,10 +351,9 @@
       <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.
       </p>
      </div>
-    <div class="footer-icon">
+    <div class="footer-div">
       <p class="text-social">Social media</p>
-    <div class="menu-icon">
-      <ul class="footer-soc-list"> 
+          <ul class="footer-soc-list"> 
         <li class="footer-soc-item">
           <a class="footer-soc-link">
       <svg class="footer-icon" width="24" height="24"> <use href="./images/icons.svg#icon-instagram-21"> </use> </svg> </a> 
@@ -373,8 +372,7 @@
         </li>
          </ul>  
     </div>
-    </div>
-    </div>
+  </div>
    </footer>
   </body>
 </html>
