--- a/index.html
+++ b/index.html
@@ -355,19 +355,19 @@
       <p class="text-social">Social media</p>
           <ul class="footer-soc-list"> 
         <li class="footer-soc-item">
-          <a class="footer-soc-link">
+          <a class="footer-soc-link" href="">
       <svg class="footer-icon" width="24" height="24"> <use href="./images/icons.svg#icon-instagram-21"> </use> </svg> </a> 
          </li> 
          <li class="footer-soc-item">
-          <a class="footer-soc-link">
+          <a class="footer-soc-link" href="">
          <svg class="footer-icon" width="24" height="24"> <use href="./images/icons.svg#icon-twitter-11"> </use> </svg></a>
          </li>
          <li class="footer-soc-item">
-          <a  class="footer-soc-link">
+          <a  class="footer-soc-link" href="">
          <svg class="footer-icon" width="24" height="24"> <use href="./images/icons.svg#icon-facebook-11"> </use> </svg></a>
          </li>
          <li class="footer-soc-item">
-          <a class="footer-soc-link">
+          <a class="footer-soc-link" href="">
          <svg class="footer-icon" width="24" height="24"> <use href="./images/icons.svg#icon-linkedin-11"> </use> </svg></a> 
         </li>
          </ul>  
